<resources>
    <string name="app_name">SandeepDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="country">Country :</string>
    <string name="city">City :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_add_money">Add Money To your Wallet And make payment</string>
    <string name="recommended">Recommended</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="upi">UPI</string>
    <string name="online">Online</string>
    <string name="cancel">Cancel</string>
    <string name="recharge">Recharge</string>
</resources>