<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/msg_add_money"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:maxLength="10"
        android:inputType="number"
        android:drawableRight="@drawable/baseline_currency_rupee_24"
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_grey"
        android:hint="Enter amount"
        android:paddingHorizontal="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1" />


    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/recommended"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/etAmount" />

    <TextView
        android:background="@drawable/rounded_grey"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/baseline_currency_rupee_24"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="30000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        tools:layout_editor_absoluteY="236dp" />

    <TextView
        android:background="@drawable/rounded_grey"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/baseline_currency_rupee_24"
        app:layout_constraintTop_toTopOf="@+id/button3"
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="20000"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        tools:layout_editor_absoluteY="236dp" />

    <TextView
        android:background="@drawable/rounded_grey"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:drawableStart="@drawable/baseline_currency_rupee_24"
        app:layout_constraintTop_toTopOf="@+id/button3"
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="10000"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="236dp" />


    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/payment_mode"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <RadioGroup
        android:id="@+id/rg"
        android:paddingVertical="10dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:text="@string/online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_marginLeft="40dp"
            android:text="@string/upi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/rg"
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_grey"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
         />

    <TextView
        android:textAllCaps="false"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/btnCancel"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:id="@+id/btnRecharge"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_selected"
        android:text="@string/recharge"
        app:layout_constraintRight_toRightOf="parent"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>
